data/derived/sp14/progs/unify/prog3054.ml.out
Characters 91-92:
  | h :: t -> [x * y + h/10; h mod 10] @ t
                   ^
Error: This expression has type ('a -> 'b) -> ('c -> 'a) -> 'c -> 'b
       but an expression was expected of type int
